--- a/tibame0410.ipynb
+++ b/tibame0410.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOiLTQcsm1v+BbkZhufCU/F",
+      "authorship_tag": "ABX9TyP2KLNE1OZ85yyxebRNuhRG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 27,
       "metadata": {
         "id": "pXrc3-LVWhEl",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e86034d2-bba8-4d18-d0fa-d7c59ba3cf9a"
+        "outputId": "2eece54b-b9d1-4d95-f07e-49c73f3c0fde"
       },
       "outputs": [
         {
@@ -44,7 +44,8 @@
             "你今天吃下多少蛋白質:160\n",
             "你今天吃下多少脂肪:75\n",
             "你今天吃下多少碳水:200\n",
-            "我今天吃了：蛋白質:160.0 脂肪:75.0 碳水:200.0 總卡路里:2115.0\n"
+            "我今天吃了：蛋白質:160.0 脂肪:75.0 碳水:200.0 總卡路里:2115.0\n",
+            "吃不夠\n"
           ]
         }
       ],
@@ -54,7 +55,13 @@
         "fat = float(input(\"你今天吃下多少脂肪:\"))\n",
         "carbon = float(input(\"你今天吃下多少碳水:\"))\n",
         "calroie = protein * 4 + fat * 9 + carbon * 4\n",
-        "print(\"我今天吃了：\" + \"蛋白質:\" + str(protein) + \" 脂肪:\" + str(fat) + \" 碳水:\" + str(carbon) + \" 總卡路里:\" + str(calroie) )"
+        "print(\"我今天吃了：\" + \"蛋白質:\" + str(protein) + \" 脂肪:\" + str(fat) + \" 碳水:\" + str(carbon) + \" 總卡路里:\" + str(calroie) )\n",
+        "\n",
+        "total_calroie = 2200\n",
+        "if calroie >= total_calroie:\n",
+        "  print(\"吃夠了\")\n",
+        "else:\n",
+        "  print(\"吃不夠\")"
       ]
     }
   ]
