--- a/tibame0411.ipynb
+++ b/tibame0411.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMt5CABFDXUDYNccJfDC4hR",
+      "authorship_tag": "ABX9TyOyiqTCJoBYEfxTGvIFNz8u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -250,6 +250,110 @@
             "       xxxxx       \n",
             "        xxx        \n",
             "         x         \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total = 0\n",
+        "i = 0\n",
+        "while i < 10:\n",
+        "    total = total + (i+1)\n",
+        "    print(total)\n",
+        "    i = i + 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V6GfIxjL15kV",
+        "outputId": "74fe37cc-2edd-4dbc-93a5-82c7191e9177"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "6\n",
+            "10\n",
+            "15\n",
+            "21\n",
+            "28\n",
+            "36\n",
+            "45\n",
+            "55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b = 212, 7\n",
+        "result = str(a//b) + \".\"\n",
+        "a = a % b\n",
+        "i = 0\n",
+        "while i < 10:\n",
+        "    x = (a * 10) // b\n",
+        "    y = (a * 10) % b\n",
+        "    result = result + str(x)\n",
+        "    a = y\n",
+        "    i = i + 1\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YRk3faAy3Frj",
+        "outputId": "dd1d69c0-3043-4ab0-df64-7b3bd3b6e9ed"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30.2857142857\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b = 213, 5\n",
+        "result = str(a//b) + \".\"\n",
+        "a = a % b\n",
+        "i = 0\n",
+        "while i < 10:\n",
+        "    x = (a * 10) // b\n",
+        "    result = result + str(x)\n",
+        "    a = (a * 10) % b\n",
+        "    if a == 0:\n",
+        "        break\n",
+        "    i = i + 1\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oeHuIE0H9d4o",
+        "outputId": "d66d51fa-ae12-4247-90a2-f39b0da91e9a"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "42.6\n"
           ]
         }
       ]
