--- a/tibame0411.ipynb
+++ b/tibame0411.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOyiqTCJoBYEfxTGvIFNz8u",
+      "authorship_tag": "ABX9TyMlPG38mH5UUMGJUa9jYzW3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -354,6 +354,72 @@
           "name": "stdout",
           "text": [
             "42.6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "count0, count1 = 0, 0\n",
+        "total = 100\n",
+        "i = 0\n",
+        "while i < total:\n",
+        "    n = random.randint(0, 1)\n",
+        "    i = i + 1\n",
+        "    if n == 0:\n",
+        "        count0 = count0 + 1\n",
+        "    else:\n",
+        "        count1 = count1 + 1\n",
+        "print(count0, count1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ctjQPX1AXEv-",
+        "outputId": "576778cd-32dc-41f4-d18f-f489cf959849"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "51 49\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "count0, count1 = 0, 0\n",
+        "total = 100\n",
+        "i = 0\n",
+        "result = [0] * 10\n",
+        "while i < total:\n",
+        "    n = random.randint(0, 9)\n",
+        "    i = i + 1\n",
+        "    result[n] = result[n] + 1\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-G4LMVGTXom6",
+        "outputId": "2d1c946d-d548-4185-d60c-d963cc0edae1"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[9, 12, 7, 9, 10, 16, 11, 7, 11, 8]\n"
           ]
         }
       ]
