--- a/tibame0411.ipynb
+++ b/tibame0411.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhs3IIW3fKhn9d9EWZL+mI",
+      "authorship_tag": "ABX9TyPEF2x1mJykO21BtXMJ0eDH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -687,6 +687,99 @@
           "name": "stdout",
           "text": [
             "面積: 3.143555466911028\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "win, lost, even = 0, 0, 0\n",
+        "trans = [\"輸qq\", \"平手\", \"贏\" ]\n",
+        "while win < 3:\n",
+        "    result = random.randint(-1, 1)\n",
+        "    print(trans[result+1])\n",
+        "    if result == 1:\n",
+        "        win = win + 1\n",
+        "    elif result == -1:\n",
+        "        lost = lost + 1\n",
+        "    elif result == 0:\n",
+        "        even = even + 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cInCpfjVFaoc",
+        "outputId": "eff9f46a-260a-42db-e486-87c85bc56972"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "贏\n",
+            "平手\n",
+            "平手\n",
+            "輸qq\n",
+            "輸qq\n",
+            "贏\n",
+            "贏\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "win, even, lose = 0, 0, 0\n",
+        "trans = [\"輸:(\", \"平手\", \"贏:)\"]\n",
+        "# while True的好處\n",
+        "# 1. 判斷的時間點很自由\n",
+        "# 2. 判斷的式子也會很自由\n",
+        "# 3. 收尾工作也很自由\n",
+        "# (隱藏) 中文會比較容易說\n",
+        "while True:\n",
+        "    result = random.randint(-1, 1)\n",
+        "    print(trans[result+1])\n",
+        "    if result == -1:\n",
+        "        lose = lose + 1\n",
+        "    elif result == 0:\n",
+        "        even = even + 1\n",
+        "    elif result == 1:\n",
+        "        win = win + 1\n",
+        "\n",
+        "    if win == 3:\n",
+        "        print(\"WIN!!!!\")\n",
+        "        break\n",
+        "    elif lose == 3:\n",
+        "        print(\"LOSE!!!\")\n",
+        "        break\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RFb36sQ8KKiY",
+        "outputId": "d09b9f42-7a0c-4e83-a730-669b54cc9d1d"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "贏:)\n",
+            "平手\n",
+            "贏:)\n",
+            "贏:)\n",
+            "WIN!!!!\n"
           ]
         }
       ]
