--- a/tibame0411.ipynb
+++ b/tibame0411.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEF2x1mJykO21BtXMJ0eDH",
+      "authorship_tag": "ABX9TyMhk+BuboSs1hiKMr1FofJ4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -780,6 +780,62 @@
             "贏:)\n",
             "贏:)\n",
             "WIN!!!!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "p, f, c = 0, 0, 0\n",
+        "while True:\n",
+        "    choice = input(\"0.protein 1.fat 2.carbon 3.一碗飯 +.今天統計 q.離開迴圈\")\n",
+        "    # 如果他選的0-2: 那你要輸入幾克\n",
+        "    # if (choice == \"0\") or (choice == \"1\") or (choice == \"2\"):\n",
+        "    if choice in [\"0\", \"1\", \"2\"]:\n",
+        "        gram = int(input(\"幾克:\"))\n",
+        "        if choice == \"0\":\n",
+        "            p = p + gram\n",
+        "        elif choice == \"1\":\n",
+        "            f = f + gram\n",
+        "        elif choice == \"2\":\n",
+        "            c = c + gram\n",
+        "        print(\"p f c\", p, f, c)\n",
+        "    elif choice == \"3\":\n",
+        "        c = c + 65\n",
+        "    elif choice == \"+\":\n",
+        "        calorie = p * 4 + f * 9 + c * 4\n",
+        "        print(\"今天吃了\", p, \"蛋白質\", f, \"脂肪\", c, \"碳水化合物\")\n",
+        "        print(\"熱量為\", calorie)\n",
+        "        p, f, c = 0, 0, 0\n",
+        "    elif choice == \"q\":\n",
+        "        break\n",
+        "    # 如果他選的是3 p+0 f+0 c+65\n",
+        "    # 如果你選的是+: 你要印出今天吃了多少熱量, 然後把pfc重製成0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FOM4BOJJTXWE",
+        "outputId": "0ce6639e-714e-4454-962c-0a7d56383e77"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.protein 1.fat 2.carbon 3.一碗飯 +.今天統計 q.離開迴圈0\n",
+            "幾克:200\n",
+            "p f c 200 0 0\n",
+            "0.protein 1.fat 2.carbon 3.一碗飯 +.今天統計 q.離開迴圈3\n",
+            "0.protein 1.fat 2.carbon 3.一碗飯 +.今天統計 q.離開迴圈+\n",
+            "今天吃了 200 蛋白質 0 脂肪 65 碳水化合物\n",
+            "熱量為 1060\n",
+            "0.protein 1.fat 2.carbon 3.一碗飯 +.今天統計 q.離開迴圈Ｑ\n",
+            "0.protein 1.fat 2.carbon 3.一碗飯 +.今天統計 q.離開迴圈q\n"
           ]
         }
       ]
