--- a/tibame0411.ipynb
+++ b/tibame0411.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhk+BuboSs1hiKMr1FofJ4",
+      "authorship_tag": "ABX9TyOVTQMs6qnQ9KutAzX+Y5Wz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -836,6 +836,67 @@
             "熱量為 1060\n",
             "0.protein 1.fat 2.carbon 3.一碗飯 +.今天統計 q.離開迴圈Ｑ\n",
             "0.protein 1.fat 2.carbon 3.一碗飯 +.今天統計 q.離開迴圈q\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nutritions = {\n",
+        "    \"p\": 0,\n",
+        "    \"f\": 0,\n",
+        "    \"c\": 0\n",
+        "}\n",
+        "while True:\n",
+        "    choice = input(\"p.protein f.fat c.carbon 3.一碗飯 +.今天統計 q.離開迴圈\")\n",
+        "    # 如果他選的0-2: 那你要輸入己克\n",
+        "    # if (choice == \"0\") or (choice == \"1\") or (choice == \"2\"):\n",
+        "    if choice in [\"p\", \"f\", \"c\"]:\n",
+        "        gram = int(input(\"幾克:\"))\n",
+        "        nutritions[choice] = nutritions[choice] + gram\n",
+        "        print(\"p f c\", nutritions[\"p\"], nutritions[\"f\"], nutritions[\"c\"])\n",
+        "    elif choice == \"3\":\n",
+        "        nutritions[\"c\"] = nutritions[\"c\"] + 65\n",
+        "    elif choice == \"+\":\n",
+        "        calorie = nutritions[\"p\"] * 4 + nutritions[\"f\"] * 9 + nutritions[\"c\"] * 4\n",
+        "        print(\"今天吃了\", nutritions[\"p\"], \"蛋白質\",\n",
+        "                  nutritions[\"f\"], \"脂肪\",\n",
+        "                  nutritions[\"c\"], \"碳水化合物\")\n",
+        "        print(\"熱量為\", calorie)\n",
+        "        nutritions = {\n",
+        "            \"p\": 0,\n",
+        "            \"f\": 0,\n",
+        "            \"c\": 0\n",
+        "        }\n",
+        "    elif choice == \"q\":\n",
+        "        break\n",
+        "    # 如果他選的是3 p+0 f+0 c+65\n",
+        "    # 如果你選的是+: 你要印出今天吃了多少熱量, 然後把pfc重製成0\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PVyITMfOWrwr",
+        "outputId": "876fe2da-647f-414e-8e67-87016e0b711e"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "p.protein f.fat c.carbon 3.一碗飯 +.今天統計 q.離開迴圈1\n",
+            "p.protein f.fat c.carbon 3.一碗飯 +.今天統計 q.離開迴圈20\n",
+            "p.protein f.fat c.carbon 3.一碗飯 +.今天統計 q.離開迴圈f\n",
+            "幾克:30\n",
+            "p f c 0 30 0\n",
+            "p.protein f.fat c.carbon 3.一碗飯 +.今天統計 q.離開迴圈+\n",
+            "今天吃了 0 蛋白質 30 脂肪 0 碳水化合物\n",
+            "熱量為 270\n",
+            "p.protein f.fat c.carbon 3.一碗飯 +.今天統計 q.離開迴圈q\n"
           ]
         }
       ]
