--- a/tibame_crawler0422.ipynb
+++ b/tibame_crawler0422.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPyhahKuIA6qmi2BnqXoIF",
+      "authorship_tag": "ABX9TyPgY576oRnRoAUB/f23aw8h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1696,6 +1696,85 @@
         "        print(lunch.text)\n",
         "        print(\"-\" * 30)\n",
         ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# strip/split/join/replace\n",
+        "s = \"       \\n     \\t    法 料理         \\n\"\n",
+        "print(s.strip())\n",
+        "\n",
+        "s = \"2002/02/03\"\n",
+        "a, b, c = s.split(\"/\")\n",
+        "print(a, b, c)\n",
+        "\n",
+        "print(\"-\".join([a, b, c]))\n",
+        "\n",
+        "\n",
+        "print(\"123, 456, 789\".replace(\",\", \"!\", 1))\n",
+        "\n",
+        "s = \"abc,def\"\n",
+        "s = s.replace(\",\", \"!\")\n",
+        "print(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k2hc733uiu9S",
+        "outputId": "03593877-fa76-4c19-d526-b021b2a8ea27"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "法 料理\n",
+            "2002 02 03\n",
+            "2002-02-03\n",
+            "123! 456, 789\n",
+            "abc!def\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = [20, 30, 40]\n",
+        "b = scores.append(100)\n",
+        "print(scores)\n",
+        "print(b)\n",
+        "\n",
+        "# 1. 以前: 要=才會改\n",
+        "#    現在(例外): list的功能都是直接改\n",
+        "# 2. 以前: 某些功能沒有回傳值\n",
+        "#    現在(更正): 任何功能都有回傳值, 只是有些功能回傳了 None 這個值\n",
+        "# None: 特別的型態 無\n",
+        "print(print(5))\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2Ffk9i5XlYao",
+        "outputId": "3e5a0fe9-cbbd-4f59-a3ef-c5b22fd24eca"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[20, 30, 40, 100]\n",
+            "None\n",
+            "5\n",
+            "None\n"
+          ]
+        }
       ]
     }
   ]
