--- a/tibame_crawler0422.ipynb
+++ b/tibame_crawler0422.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgY576oRnRoAUB/f23aw8h",
+      "authorship_tag": "ABX9TyNSbfTSRLaJiSkeKlVnzZuG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1743,6 +1743,7 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "scores = [20, 30, 40]\n",
         "b = scores.append(100)\n",
         "print(scores)\n",
@@ -1754,16 +1755,30 @@
         "#    現在(更正): 任何功能都有回傳值, 只是有些功能回傳了 None 這個值\n",
         "# None: 特別的型態 無\n",
         "print(print(5))\n",
-        ""
+        "\n",
+        "# list你常會犯的錯誤1\n",
+        "# 雖然你跟沒印依樣, 但至少有進去\n",
+        "print(scores.append(200))\n",
+        "# 致命錯誤2\n",
+        "# scores = scores.append(300)\n",
+        "# print(scores[-1])\n",
+        "\n",
+        "\n",
+        "# !!!!!!! list的專屬功能千萬別設定回去\n",
+        "# !!!!!!! 如果你遇到的錯誤是 NoneType is xxx 那就代表你上面一訂做了 xx = None\n",
+        "# 這時候你就要反應一下: 他是list類型的, 直接改, 回傳None\n",
+        "\n",
+        "scores.append(999)\n",
+        "print(scores)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Ffk9i5XlYao",
-        "outputId": "3e5a0fe9-cbbd-4f59-a3ef-c5b22fd24eca"
+        "outputId": "1a25688a-a77c-4a56-a092-799553efad19"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1772,7 +1787,9 @@
             "[20, 30, 40, 100]\n",
             "None\n",
             "5\n",
-            "None\n"
+            "None\n",
+            "None\n",
+            "[20, 30, 40, 100, 200, 999]\n"
           ]
         }
       ]
